integ-tests/tests/snapshots/parser__bad_underscores__trailing.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ trailing:1:7
  │
1 │ foo = 0_
  │       ^^ unable to parse number


